# self-driving

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  Steering.csv  code-of-conduct.md
.gitlab/issue_templates/: Bug.md  Requirement.md
.gitlab/merge_request_templates/: Bugfix.md  Feature.md
docs/: gsr.nb  height.nb  y.nb
recs/: log.txt
scripts/: Dockerfile  run.sh  steerTest.sh  stopAtEnd.sh
src/: calcSteeringAngle.cpp  colorFilter.cpp  contrastAndBrightness.cpp  drawRect.cpp  getTime.cpp  main.cpp  reduceNoise.cpp  testMe.cpp
src/tests/: TestMain.cpp
src/tests/testImages/: test_1.txt  test_4.txt  test_5.txt
